<resources>
    <string name="app_name">YatchGame</string>
    <!-- Strings related to login -->
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_nickname">아이디</string>

    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!--login_fragment.xml-->
    <string name="login_email_input">이메일을 입력하세요</string>
    <string name="login_nickname_input">게임에서 사용하실 별명을 입력하세요</string>
    <string name="action_sign_in">로그인</string>
    <string name="action_sign_up">회원가입</string>

    <!--lobby_fragment.xml-->
    <string name="yacth_dice_room_list">야추 다이스 방 목록</string>


    <!--Lobby_Fragment-->
    <string name="make_wait_room">대기실 생성</string>
    <string name="border_string_for_parsing">+|||+</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!--dice board name tag-->
    <string name="dice_aces">Aces</string>
    <string name="dice_deuces">Deuces</string>
    <string name="dice_threes">Threes</string>
    <string name="dice_fours">Fours</string>
    <string name="dice_fives">Fives</string>
    <string name="dice_sixes">Sixes</string>

    <string name="dice_choice">Choice</string>
    <string name="dice_four_of_a_kind">4 of a Kind</string>
    <string name="dice_full_house">Full House</string>
    <string name="dice_small_straight">S.Straight</string>
    <string name="dice_large_straight">L.Straight</string>
    <string name="dice_yacht">YACHT</string>


    <!--GamePlayFragment-->
    <string name="game_result">게임 결과</string>
    <string name="game_result_win">축하드립니다!\n[%s]님의 승리입니다!</string>
    <string name="game_result_draw">치열한 경기!\n무승부 입니다.</string>
    <string name="game_versus">:</string>
    <string name="game_score">%s : %s</string>
    <string name="game_result_early">[%s]님이 게임에서 나가셨습니다.\n[%s]님은 게임에서 승리했습니다!!</string>
    <string name="game_go_out_title">게임에서 나가시겠습니까?</string>
    <string name="game_go_out_description">게임이 끝나기 전에 나가실 경우\n패배로 기록됩니다.</string>


    <!--dialog_rematch-->
    <string name="game_rematch_title">재대결 신청</string>
    <string name="game_rematch">란서님께서 재대결을 신청했습니다.\n받아들이시겠습니까?</string>

    <!--dialog-->
    <string name="dialog_positive">확인</string>
    <string name="dialog_negative">취소</string>
    <!--dialog_edit_text-->
    <string name="make_room">방 만들기</string>
    <string name="set_room_name">방제를 입력하세요</string>


</resources>