<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="board"
            type="com.ranseo.yatchgame.data.model.Board" />

    </data>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="100dp"
            android:layout_height="34dp"
            android:background="@drawable/board_list_border_line"
            android:padding="3dp">

            <ImageView
                android:id="@+id/iv_aces"
                android:src="@drawable/dice_aces"
                android:layout_width="42dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:text="@string/dice_aces"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                app:layout_constraintStart_toEndOf="@+id/iv_aces"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="100dp"
            android:layout_height="34dp"
            android:background="@drawable/board_list_border_line"
            android:padding="3dp">

            <ImageView
                android:id="@+id/iv_deuces"
                android:src="@drawable/dice_deuces"
                android:layout_width="42dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:text="@string/dice_deuces"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                app:layout_constraintStart_toEndOf="@+id/iv_deuces"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="100dp"
            android:layout_height="34dp"
            android:background="@drawable/board_list_border_line"
            android:padding="3dp">

            <ImageView
                android:id="@+id/iv_threes"
                android:src="@drawable/dice_threes"
                android:layout_width="42dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:text="@string/dice_threes"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                app:layout_constraintStart_toEndOf="@+id/iv_threes"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="100dp"
            android:layout_height="34dp"
            android:background="@drawable/board_list_border_line"
            android:padding="3dp">

            <ImageView
                android:id="@+id/iv_fours"
                android:src="@drawable/dice_fours"
                android:layout_width="42dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:text="@string/dice_fours"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                app:layout_constraintStart_toEndOf="@+id/iv_fours"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="100dp"
            android:layout_height="34dp"
            android:background="@drawable/board_list_border_line"
            android:padding="3dp">

            <ImageView
                android:id="@+id/iv_fives"
                android:src="@drawable/dice_fives"
                android:layout_width="42dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:text="@string/dice_fives"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                app:layout_constraintStart_toEndOf="@+id/iv_fives"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="100dp"
            android:layout_height="34dp"
            android:background="@drawable/board_list_border_line"
            android:padding="3dp">

            <ImageView
                android:id="@+id/iv_sixes"
                android:src="@drawable/dice_sixes"
                android:layout_width="42dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:text="@string/dice_sixes"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                app:layout_constraintStart_toEndOf="@+id/iv_sixes"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="100dp"
            android:layout_height="34dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/board_list_border_line_grey"
            android:padding="3dp">

            <TextView
                android:textColor="@color/white"
                android:text="Subtotal"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="100dp"
            android:layout_height="34dp"
            android:background="@drawable/board_list_border_line_grey"
            android:padding="3dp">

            <TextView
                android:textColor="@color/white"
                android:text="+35 Bonus"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>


</layout>